--- a/index.html
+++ b/index.html
@@ -18,34 +18,84 @@
 
     <div class="frase">
       <h1>Tenha o melhor tratamento para o seu parceiro</h1>
-      <a href="https://wa.me/551199999999" target="_blank">Fale conosco <img src="img/redes-sociais/whatsapp-svgrepo-com.png" alt="logo whatsapp"></a>
+      <div class="fale-conosco"><a href="https://wa.me/551199999999" target="_blank">Fale conosco <img src="img/redes-sociais/whatsapp-svgrepo-com.png" alt="logo whatsapp"></a></div>
     </div>
-    
-
-    </div>  
+  </div>  
 
   <div class="servicos">
+    <h3>Alguns dos nossos serviços</h3>
+    <div class="lista">
+      <ul type="square">
+        <li><span>Banho e Tosa:</span>Banho, hidratação, tosa higiênica, tosa de cachorros de diversas raças e outros serviços feitos por profissionais parceiros especialistas no assunto.</li>
+        <li><span>Veterinário 24h:</span>A saúde do seu melhor amigo em boas mãos, consultas, exames e vacinas com médicos-veterinários parceiros.</li>
+        <li><span>Dog Walker:</span>Sem tempo para sair com seu cachorro? Além de caminhadas, os passeadores parceiros Pet Anjo ainda corrigem comportamentos e ensinam comandos básicos.</li>
+        <li><span>Creche Pet:</span>A creche para cachorro é uma solução personalizada para quem não quer deixar pet sozinho em casa durante o dia. Brincadeiras, cuidados e muito carinho!</li>
+        <li><span>Produtos para seu pet:</span> produtos premium para animais de estimação. De alimentos saudáveis a brinquedos divertidos e acessórios elegantes.</li>
+      </ul>
 
+      <div class="imagens">
+        <img src="img/banho.png" alt="Banho e tosa">
+        <img src="img/veterinario.png" alt="veterinário">
+        <img src="img/creche.png" alt="creche">
+        <img src="img/dog-walker.png" alt="dog-walker">
+        <img src="img/loja.png" alt="loja">
+      </div>
+    </div>
   </div>
 
   <div class="redes-sociais">
-
+    <p>Aqui na <span>Pet Boutique</span> somos apaixonados pelo que fazemos
+    </p>
+    <div class="imagens-redes">
+      <a href="#" target="_blank"><img src="img/redes-sociais/facebook-svgrepo-com.png" alt="facebook"></a>
+      <a href="#" target="_blank"><img src="img/redes-sociais/instagram-svgrepo-com.png" alt="Instagram"></a>
+      <a href="https://wa.me/551199999999" target="_blank"><img src="img/redes-sociais/whatsapp-svgrepo-com.png" alt="whatsapp"></a>
+    </div>
   </div>
 
   <div class="marcas">
+    <h3>Nossas principais marcas</h3>
+    <div class="imagens-marcas">
+      <div class="marcas1">
+        <img src="img/marcas/AlfaPet.png" alt="AlfaPet">
+        <img src="img/marcas/BichinhoChic.png" alt="BichinhoChic">
+        <img src="img/marcas/Boehringer.png" alt="Boehringer">
+        <img src="img/marcas/exopets.png" alt="exopets">
+      </div>
+      <div class="marcas2">
+        <img src="img/marcas/Inataa.png" alt="Inataa">
+        <img src="img/marcas/LogoBiofresh.png" alt="LogoBiofresh">
+        <img src="img/marcas/LogoBravecto.png" alt="LogoBravecto">
+        <img src="img/marcas/NexgardSpectra.png" alt="NexgardSpectra">
+      </div>
+      <div class="marcas3">
+        <img src="img/marcas/PapaPets.png" alt="PapaPets">
+        <img src="img/marcas/Pickorruchos.png" alt="Pickorruchos">
+        <img src="img/marcas/royalcanini.png" alt="royalcanini">
+        <img src="img/marcas/saopet.png" alt="saopet">
+      </div>
+    </div>
 
   </div>
-
-  <div class="redes-sociais">
-
+  
+  <div class="redes-sociais2">
+    <p>Na <span>Pet Boutique</span> você encontra Estilo e Elegância para Cães e Gatos
+    </p>
+    <div class="imagens-redes">
+      <a href="#" target="_blank"><img src="img/redes-sociais/facebook-svgrepo-com.png" alt="facebook"></a>
+      <a href="#" target="_blank"><img src="img/redes-sociais/instagram-svgrepo-com.png" alt="Instagram"></a>
+      <a href="https://wa.me/551199999999" target="_blank"><img src="img/redes-sociais/whatsapp-svgrepo-com.png" alt="whatsapp"></a>
+    </div>
   </div>
 
   <div class="localizacao">
-
+    <h3>Onde estamos</h3>
+    <p>Se ficou interessado em nossos serviços, venha nos conhecer</p>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14613.304914322232!2d-46.56145831284179!3d-23.7000415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce435ecd9766ff%3A0xe56d456b3bd75cc8!2sPet%20shop%20Pet%20Boutique!5e0!3m2!1spt-BR!2sbr!4v1711205472354!5m2!1spt-BR!2sbr" ></iframe>
   </div>
 
   <div class="rodape">
-
+    <p>Desenvolvido por <a href="https://github.com/Lilarodrigues85">(Lila Rodrigues)</a> <img src="img/github.png" alt="github"></p>
   </div>
 </body>
 </html>
